<resources>
    <string name="app_name">iBuy</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="shopping_card">Shopping Card</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>
    <string name="order_again_image">Order Again Image</string>
    <string name="order_again">Order Again</string>
    <string name="logo_image">Logo Image</string>
    <string name="image_your_orders">Image Your Orders</string>
    <string name="your_orders">Your Orders</string>
    <string name="image_your_messages">Image Your Messages</string>
    <string name="your_messages">Your Messages</string>
    <string name="image_your_coupons">Image Your Coupons</string>
    <string name="your_coupons">Your Coupons</string>
    <string name="welcome">Welcome</string>
    <string name="notifications">Notifications</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">user93814715</string>
    <string name="turkey">Turkey</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="region">Region</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="greece">Greece</string>
    <string name="romania">Romania</string>
    <string name="search">Search</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password:</string>
    <string name="enter">Enter</string>
    <string name="e_mail">E-mail:</string>
    <string name="usernameEdit">Username:</string>
    <string name="hello_we_re_super_excited_to_see_you_join_the_i_buy_community_we_hope_you_will">Hello , We’re super excited to see you join the I-Buy community. We hope you will...</string>
    <string name="_04_04">04.04</string>
    <string name="by_i_bot">by I-Bot</string>
    <string name="hello_we_have_best_flowers_for_you_if_you_realy_feel_ready_for">Hello, We have Best Flowers for You If you really feel ready for...</string>
    <string name="_03_05">03.05</string>
    <string name="flowerbasket_com">flowerBasket.com</string>
    <string name="messages">Messages</string>
    <string name="for_your_questions_yes_we_are_the_best_e_commerance_shop">For Your Questions; Yes we are the best e-commerance shop...</string>
    <string name="_18_04">18.04</string>
    <string name="bestshopever">bestShopEver</string>
    <string name="i_buy_welcome">I-Buy Welcome</string>
    <string name="i_bot">i-Bot</string>
    <string name="for_your_questions_yes_we_are_the_best_e_commerance_shop_in_the_all_universe_if_you_are_really_wondering_our_products_quality_you_can_try_n_nbest_wishes">For Your Questions; Yes we are the best e-commerance shop in the all universe.If you are really wondering our products quality you can try. \n\nBest Wishes</string>
    <string name="hello_nwe_have_best_flowers_for_you_and_ur_friends_if_you_realy_feel_ready_for_our_glamorous_flowers_you_can_visit_our_page_in_i_buy_and_you_can_see_our_prides_ncaution_we_recommend_reduce_the_brightness_for_your_eye_health_n_nstay_with_our_flowers">Hello,\nWe have Best Flowers for you and ur friends if you really feel ready for our glamorous flowers you can visit our page in I-Buy and you can see our bests. \nCaution: We recommend that to reduce the brightness for your eye health\n\nStay with Our Flowers</string>
    <string name="check_our_page">Check Our Page</string>
    <string name="hello_nwe_re_super_excited_to_see_you_join_the_i_buy_community_we_hope_you_will_be_happy_with_your_thinks_and_that_you_will_shop_with_us_again_and_again_nour_goal_is_to_offer_the_widest_range_of_worlds_all_products_at_the_highest_quality_if_you_think_we_should_add_any_items_to_our_store_don_t_hesitate_to_contact_us_and_share_your_feedback_nuntil_then_enjoy_your_shopping_n_ni_bot">Hello , \nWe’re super excited to see you join the I-Buy community. We hope you will be happy with your thinks and that you will shop with us again and again. \nOur goal is to offer the widest range of worlds all products at the highest quality. If you think we should add any items to our store, don’t hesitate to contact us and share your feedback. \nUntil then, enjoy your shopping! \n\nI-Bot</string>
    <string name="settings1">Settings</string>
    <string name="in_the_distribution_phase">In the distribution phase</string>
    <string name="delivered_18_05_2022">Delivered 18.05.2022</string>
    <string name="delivered_15_03_2022">Delivered 15 03 2022</string>
    <string name="delivered_25_12_2021">Delivered 25 12 2021</string>
    <string name="apple_macbook_m1_chip_2020">Apple MacBook M1 Chip 2020</string>
    <string name="philips_fc9750_07_powerpro">Philips FC9750/07 Powerpro</string>
    <string name="the_office_michael_scoot_mug">The Office Michael Scoot Mug</string>
    <string name="xiaomi_redmi_note_11_pro">Xiaomi Redmi Note 11 Pro</string>
    <string name="levi_s_long_sleeve_t_shirt_man">Levi\'s Long Sleeve T-shirt Man</string>
    <string name="discount_on_smart_phones">Discount on Smart Phones</string>
    <string name="welcome_discount_only_for_you">Welcome Discount only for YOU</string>
    <string name="_20_discount_on_purchases_over_300">$20 discount on purchases over $300</string>
    <string name="discount_on_plane_tickets">Discount on Plane Tickets</string>
    <string name="last_8_days">Last 8 days</string>
    <string name="_30_discount_on_purchases_over_150_on_selected_products">$30 discount on purchases over $150 on selected products</string>
    <string name="_25_discount_on_purchases_over_400_only_for_oppo_xiaomi_reeder">$25 discount on purchases over $400 \'Only for Oppo,Xiaomi,Reeder\'</string>
    <string name="last_23_hours">Last 23 Hours</string>
    <string name="delivered_29_02_2022">Delivered 29 02 2022</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="re_are_you_really_the_best">Re: Are You Really The Best</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="add_to_basket_item">Add to Basket</string>
    <string name="productstatus">ProductStatus</string>
    <string name="status">Status:</string>
    <string name="product_category">Product Category</string>
    <string name="prod_price">Prod.Price</string>
    <string name="stock">Stock:</string>
    <string name="stocknumber">StockNumber</string>
    <string name="you_have_0_notifications">You Have 0 Notifications</string>
    <string name="add_to_basket">Add to Basket</string>
</resources>