<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EditProfileFragment">


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/enter_your_username"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="143dp"
            android:text="@string/usernameEdit"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextUsername"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="80dp"
            android:layout_marginTop="64dp"
            android:text="@string/e_mail"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/editTextEmail"
            android:layout_width="223dp"
            android:layout_height="41dp"
            android:layout_marginVertical="68dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="28dp"
            android:background="#8A959898"
            android:text=" iamfirstuser@ibuy.com"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="***********"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

        <Button
            android:id="@+id/button"
            android:layout_width="308dp"
            android:layout_height="55dp"
            android:layout_marginBottom="117dp"
            android:text="@string/enter"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>