<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MessagesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutIBuy"
            android:layout_width="288dp"
            android:layout_height="92dp"
            android:layout_marginBottom="109dp"
            android:background="#204BA3C7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="241dp"
                android:layout_height="57dp"
                android:text="@string/hello_we_re_super_excited_to_see_you_join_the_i_buy_community_we_hope_you_will"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/_04_04"
                android:textColor="#66000000"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:text="@string/by_i_bot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageViewReadI"
                android:layout_width="28dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_email_read"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="24dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="#0000BCD4"
                android:src="@drawable/ic_flutter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="196dp"
            android:src="@drawable/blue_to_white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutFlowerBasket"
            android:layout_width="288dp"
            android:layout_height="92dp"
            android:layout_marginBottom="44dp"
            android:background="#204BA3C7"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayoutBestShop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="247dp"
                android:layout_height="56dp"
                android:text="@string/hello_we_have_best_flowers_for_you_if_you_realy_feel_ready_for"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/_03_05"
                android:textColor="#66000000"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:text="@string/flowerbasket_com"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageViewReadF"
                android:layout_width="28dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_email_unread"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="24dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="#0000BCD4"
                android:src="@drawable/ic_grass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/messages"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutBestShop"
            android:layout_width="288dp"
            android:layout_height="92dp"
            android:layout_marginBottom="33dp"
            android:background="#204BA3C7"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayoutIBuy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="241dp"
                android:layout_height="57dp"
                android:text="@string/for_your_questions_yes_we_are_the_best_e_commerance_shop"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/_18_04"
                android:textColor="#66000000"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:text="@string/bestshopever"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageViewReadB"
                android:layout_width="28dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_email_unread"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="#0000BCD4"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>