<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.IBuyMessageFragment">

        <Button
            android:id="@+id/buttonBestShopRead"
            android:layout_width="199dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="#72FFFFFF"
            android:text="@string/mark_as_unread"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewReadBestShop"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:src="@drawable/blue_to_white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/re_are_you_really_the_best"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="40dp"
            android:text="@string/bestshopever"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />


        <TextView
            android:id="@+id/textView26"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="296dp"
            android:background="#004BA3C7"
            android:text="@string/for_your_questions_yes_we_are_the_best_e_commerance_shop_in_the_all_universe_if_you_are_really_wondering_our_products_quality_you_can_try_n_nbest_wishes"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="73dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewReadBestShop"
            android:layout_width="79dp"
            android:layout_height="65dp"
            android:layout_margin="22dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonBestShopRead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/ic_email_read" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>